# log-reader

./: .gitignore  Cargo.toml  LICENSE  README.md  sheepit.toml
.cursor/rules/: plan.mdc
.github/workflows/: test.yml
examples/: comprehensive_usage.rs  simple_usage.rs
src/: error.rs  lib.rs  main.rs  reader.rs  stream.rs  test_helpers.rs  watcher.rs
tests/: integration_tests.rs
