[package]
name = "log-reader"
version = "0.2.0"
edition = "2024"
description = "A Rust library for real-time log file monitoring that emits batched content as Vec<String>."
license = "MIT"
exclude = ["fixtures/"]

[dependencies]
notify = "8.0.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
